--- a/search/index.html
+++ b/search/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!--A comment-->
         <style>
             input:hover[type="submit"], a.button:hover {
                 border: 1px solid #dfe1e5;
